Add menu item detail endpoint and docs
